--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id "groovy"
     id "java-gradle-plugin"
     id "maven-publish"
 }
@@ -9,17 +10,19 @@ version = "0.1.0"
 targetCompatibility = "1.7"
 sourceCompatibility = "1.7"
 
-publishing {
-    repositories {
-        maven {
-            url "/tmp/localPlugins"
-        }
+repositories {
+    jcenter()
+}
+
+dependencies {
+    testCompile ('org.spockframework:spock-core:1.1-groovy-2.4') {
+        exclude module: 'groovy-all'
     }
 }
 
 gradlePlugin {
     plugins {
-        simplePlugin {
+        experimentalJigsawPlugin {
             id = "org.gradle.java.experimental-jigsaw"
             implementationClass = "org.gradle.java.JigsawPlugin"
         }
