--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	testCompile('org.spockframework:spock-core:1.1-groovy-2.4') {
 		exclude module: 'groovy-all'
 	}
+	testCompile('org.mockito:mockito-core:2.11.0')
 }
 
 jacocoTestReport {
